FAI-511: Counterfactual: Add support for "partial" goals in TrustyService